log
Wed 13 Sep 2023 10:52:43 PM UTC: 
 tests:  1|8
total_score: 0/70
75ad396
Wed 13 Sep 2023 11:06:35 PM UTC: 
 treemap.c | 64 +++++++++++++++++++++++++++++++++++++++++++++++++++++----------
 1 file changed, 54 insertions(+), 10 deletions(-)
 tests:  4|7
total_score: 5/70
5a6b630
Thu 14 Sep 2023 12:44:58 AM UTC: 
 treemap.c | 17 +++++++++++++++--
 1 file changed, 15 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
d593ede
Thu 14 Sep 2023 07:19:10 PM UTC: 
 treemap.c | 38 ++++++++++++++++++++++++++++++++++++--
 1 file changed, 36 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘minimum’:
treemap.c:115:1: error: control reaches end of non-void function [-Werror=return-type]
  115 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d4721b7
Thu 14 Sep 2023 07:19:28 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
14d1477
Thu 14 Sep 2023 09:07:32 PM UTC: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
272bfc4
Thu 14 Sep 2023 09:08:00 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:77:19: error: too few arguments to function ‘is_equal’
   77 |     int compare = is_equal(key, tree -> current -> pair -> key);
      |                   ^~~~~~~~
In file included from test.c:4:
treemap.c:22:5: note: declared here
   22 | int is_equal(TreeMap* tree, void* key1, void* key2){
      |     ^~~~~~~~
Compilation failed
11cab96
Thu 14 Sep 2023 09:09:14 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
78f3561
Fri 15 Sep 2023 03:47:59 AM UTC: 
 treemap.c | 26 +++++++++++++++++++-------
 1 file changed, 19 insertions(+), 7 deletions(-)
 tests:  6|7
total_score: 5/70
4381721
Fri 15 Sep 2023 03:48:33 AM UTC: 
 treemap.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  6|7
total_score: 5/70
0622df9
Fri 15 Sep 2023 03:53:32 AM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  6|7
total_score: 5/70
90d7b35
Fri 15 Sep 2023 03:59:35 AM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  6|7
total_score: 5/70
3a6fe88
Fri 15 Sep 2023 08:36:48 PM UTC: 
 treemap.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
4c5651b
Fri 15 Sep 2023 08:42:29 PM UTC: 
 treemap.c | 34 +++++++++++++++++-----------------
 1 file changed, 17 insertions(+), 17 deletions(-)
 tests:  8|7
total_score: 5/70
2aeb27a
Fri 15 Sep 2023 08:44:55 PM UTC: 
 treemap.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
 tests:  11|6
total_score: 15/70
1195696
Fri 15 Sep 2023 08:47:17 PM UTC: 
 treemap.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
 tests:  11|6
total_score: 15/70
2370494
Fri 15 Sep 2023 08:47:52 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
7e06a49
Fri 15 Sep 2023 09:15:32 PM UTC: 
 treemap.c | 74 ++++++++++++++++++++++++++++++++++++++++++++++++---------------
 1 file changed, 57 insertions(+), 17 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:166:24: error: ‘newnode’ undeclared (first use in this function); did you mean ‘newNode’?
  166 |       parent -> left = newnode;
      |                        ^~~~~~~
      |                        newNode
treemap.c:166:24: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
68dfe5b
Fri 15 Sep 2023 09:15:48 PM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
8626a26
Fri 15 Sep 2023 09:16:02 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8e219b8
Fri 15 Sep 2023 09:19:29 PM UTC: 
 treemap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  0|0
a2fb12f
